package com.example.mealplaner;

public interface FavouriteMealPresenterInterface {
    public void getFavouriteMeals();
    public void removeFav(Meal meal);
}
