package com.example.mealplaner;

public interface OnDeleteFromFavClickListener {
    public void onDeleteClick(Meal meal);
}
